# didactic-computing-machine

./: .gitignore  .scalafmt.conf  LICENSE  README.md
99-problems/: Lists.hs
abandoned-scala-amish/: readme.md
angular/small-commercial-spa/: package.json  tslint.json
concurrency/dining_philosopher/: program.c
euler/: problem2_fibonnacci.hs
go/airport/: go.mod
go/balancerino/: go.mod
go/configurator/: go.mod  main.go
go/magicnum/: go.mod  main.go
go/playground/: README.md  go.mod
go/pocket/: .gitignore  Taskfile.yml  go.mod
go/property/: go.mod
machine-learning/decision-tree/: build.sbt
machine-learning/k-means-clusterization-with-mllib/: .gitignore  build.sbt
machine-learning/linear-regression/: .gitignore  README.md  build.sbt
machine-learning/naive-bayes/: .gitignore  README.md  build.sbt
machine-learning/neural-network/: .gitignore  README.md  build.sbt
machine-learning/single-layer-perceptron/: .gitignore  build.sbt
ng/small-commercial-spa/: README.md  angular-cli.json
ruby-euler/: README.md
rust/aoc2023/: Cargo.toml
rust/mini-redis/: Cargo.toml
rust/practice/: README.md
scala/cat-inverter/: .gitignore
scala/constraint-satisfaction/: build.sbt
scala/flink-try/: build.sbt  docker-compose.yml
scala/game-of-life/: index.html
scala/scala3-diy/: README.md  build.sbt
scala/shopping_cart/: LICENSE  README.md  build.sbt
software-and-math-exercises/: docker-compose.yml
software-and-math-exercises/euler/euler.hsproj/: .uuid  Problem1.hs  _Problem1.hsplay  euler.cabal  stack.yaml
wasm/tutorial-game-of-life/: Cargo.toml  (+1 more)
(+371 files in other folders)
